1998-03-27  Jim Meyering  <meyering@eng.ascend.com>

	* cppi.l (initial_i_depth): New variable.
	(%{%}-block): Initialize initial_i_depth, and i_depth from that.
	(emit_or_check): Accommodate possibility that i_depth may now be
	negative.
	(emit_indented_cpp): Likewise.
	(<<EOF>>): Likewise.

	* configure.in: Use AM_PROG_LEX in place of the (AC_PROG_LEX,
	AC_DECL_YYTEXT) pair.

1998-03-15  Jim Meyering  <meyering@eng.ascend.com>

	* Makefile.am (cppi.c): Add explicit rule.

	* cppi.l (VERSION): Remove definition.
	(usage): Describe options.

	autoconfiscate and automakify
	* Add associated new files.

	* fatal.c: Remove duplicate code.  Use #ifdefs instead.

	* tests/: New directory.
	Move test scripts into it.

1997-12-29  Jim Meyering  <meyering@na-net.ornl.gov>

	* cppi.l (usage): Add `\n\' at end of last line of message.

1997-12-06  Jim Meyering  <meyering@na-net.ornl.gov>

	* Makefile (cpp-cond-lookup.c): Use sed to insert a cast of str[]
	reference to `unsigned char' to avoid warnings from gcc.

1997-11-01  Jim Meyering  <meyering@na-net.ornl.gov>

	* Makefile (cppi): Depend on obstack.o.

	* obstack.c: New file.
	* obstack.h: New file.

	* cppi.l: Remove hard-coded limit: use an obstack for
	keyword/line_number pairs.

1997-10-26  Jim Meyering  <meyering@na-net.ornl.gov>

	* cppi.l: Don't pack keyword/line_number pairs into an int.
	Instead, keep a stack of structs.
	Update stack manipulation functions.
	(nth_entry): New function.

Thu Jun 26 23:27:31 1997  /  <meyering@na-net.ornl.gov>

	* cppi.l (#<any-cpp-directive>): Don't try to return early when
	detecting improper indentation and -l was specified.

Tue Jun 24 08:31:36 1997  /  <meyering@na-net.ornl.gov>

	* cppi.l (emit_indented_cpp): Initialize *fail to zero.

Mon Jun 23 06:59:06 1997  /  <meyering@na-net.ornl.gov>

	* Makefile (cppi): Add getopt.o and getopt1.o.

	* cppi.l (main): Add --list-files-only (-l) option.
	Suggestion from Ignacio Goyret.
	Use GNU getopt.
